# voproof-rust

./: .gitignore  Cargo.toml  README.md
crypto-primitives/: Cargo.toml  README.md
crypto-primitives/src/sponge/: absorb.rs
crypto-primitives/src/sponge/constraints/: absorb.rs
macros/: Cargo.toml
plonk/: Cargo.toml
plonk-core/: Cargo.toml
plonk-core/src/: circuit.rs  commitment.rs  error.rs  test.rs  util.rs
plonk-core/src/constraint_system/: arithmetic.rs  boolean.rs  composer.rs  hash.rs  helper.rs  logic.rs  lookup.rs  range.rs
plonk-core/src/constraint_system/ecc/: mod.rs
plonk-core/src/constraint_system/ecc/curve_addition/: fixed_base_gate.rs  variable_base_gate.rs
plonk-core/src/constraint_system/ecc/scalar_mul/: fixed_base.rs  variable_base.rs
plonk-core/src/lookup/: lookup_table.rs  multiset.rs  preprocess.rs
plonk-core/src/permutation/: mod.rs
plonk-core/src/proof_system/: linearisation_poly.rs  permutation.rs  preprocess.rs  proof.rs  prover.rs  quotient_poly.rs  verifier.rs
plonk-core/src/proof_system/widget/: arithmetic.rs  lookup.rs  mod.rs
plonk-core/src/proof_system/widget/ecc/: curve_addition.rs  fixed_base_scalar_mul.rs
plonk-hashing/: Cargo.toml
plonk-hashing/src/poseidon/: poseidon_ref.rs  round_constant.rs  zprize_constraints.rs
plonk/benches/: plonk.rs
plonk/examples/: example_poly.rs  simple_circuit.rs
voproof/: Cargo.toml  run_tests.sh  test_aliases.sh
voproof-scripts/: fibonacci.py  filter_time.py  main.py  pov_protocols.py  range_check.py  smvp_protocols.py
voproof-scripts/compiler/: __init__.py  pc_protocol.py  piop.py  vo2piop.py  vo_protocol.py  zksnark.py
voproof-scripts/compiler/builder/: latex.py  rust.py  rust_sympy.py
voproof-scripts/compiler/symbol/: coeff_manager.py  coeff_map.py  matrix.py  names.py  poly.py  util.py  vector.py
voproof-scripts/ram/: name_pair.py  quadpoly.py  step.py
voproof/benches/: groth16_bench.rs  marlin_bench.rs  plonk_bench.rs  pov_bench.rs  r1cs_bench.rs
voproof/src/: error.rs  lib.rs  main.rs
voproof/src/cs/: fibonacci.rs  hpr.rs  mod.rs  pov.rs  r1cs.rs  range.rs
voproof/src/cs/circuit/: fan_in_two.rs  mod.rs
voproof/src/kzg/: data_structures.rs  mod.rs
voproof/src/snarks/: fibonacci.rs  mod.rs  range_check.rs  template.rs  voproof_hpr.rs  voproof_pov.rs  voproof_pov_prover_efficient.rs  voproof_r1cs.rs  voproof_r1cs_prover_efficient.rs
voproof/src/tools/: mod.rs
voproof/tests/: groth16_test.rs  hpr_test.rs  marlin_test.rs  plonk_test.rs  pov_test.rs  r1cs_test.rs
voproof/tests/utils/: mod.rs  mt_circuit.rs  test_circuit.rs
