[package]
name = "plonk-core-voproof"
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
documentation.workspace = true
keywords.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
# Default Features
default = [
    # "trace-print",
    "trace",
    "asm",
    "itertools/default",
    "parallel",
]

# Raw Assembly
asm = ["ark-ff/asm"]

# Parallelism Features
parallel = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly-commit/parallel",
    "ark-poly/parallel",
]

# Enable Standard Library
std = ["ark-ec/std", "ark-ff/std"]

# Minimal Tracing Features
trace = []

# Tracing Printing Features
trace-print = ["trace", "std"]

[dependencies]
ark-bls12-381 = "0.3"
ark-std = { version = "0.3", features = ["std"] }
blake2 = "0.9"
ark-ec = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-poly = { version = "0.3" }
ark-poly-commit = { version = "0.3" }
ark-serialize = { version = "0.3", features = ["derive"] }
derivative = { version = "2.2.0", default-features = false, features = [
    "use_core",
] }
hashbrown = { version = "0.11.2", default-features = false, features = [
    "ahash",
] }
indexmap = { version = "1.8.1", default-features = false }
itertools = { version = "0.10.1", default-features = false }
merlin = { version = "3.0", default-features = false }
num-traits = { version = "0.2.14" }
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }

[dev-dependencies]
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
criterion = "0.3"
paste = "1.0.6"
tempdir = "0.3"
cfg-if = "0.1"
