[package]
name = "plonk-hashing-voproof"
documentation.workspace = true
keywords.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
include.workspace = true
license.workspace = true
edition.workspace = true
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."


[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
# Enable Standard Library
std = []

[dependencies]
plonk-core-voproof = { path = "../plonk-core", features = ["trace"] }
ark-ec = { version = "0.4.2", features = ["std"] }
ark-ff = { version = "0.4.2", features = ["std"] }
ark-serialize = { version = "0.4.2", features = ["derive"] }
ark-poly = "0.4.2"
ark-poly-commit = "0.4"
ark-crypto-primitives = { version = "^0.4.0", features = [
    "r1cs",
], default-features = false }
ark-std = { version = "^0.4.0", default-features = false }
itertools = { version = "0.12.1", default-features = false }
num-traits = "0.2.14"
derivative = { version = "2.2.0", default-features = false, features = [
    "use_core",
] }
hashbrown = { version = "0.14.5", default-features = false, features = [
    "ahash",
] }
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
thiserror = "1.0.30"

[dev-dependencies]
ark-bls12-381 = { version = "0.4", features = ["curve"] }
ark-ed-on-bls12-381 = { version = "0.4" }
neptune = { version = "13.0.0" }
